v.err
src/main.v:19:12: error: expected 1 arguments, but got 0
   17 |         description: 'Lists all stored tasks'
   18 |         required_args: 0
   19 |         execute: list_all_tasks() !
      |                  ~~~~~~~~~~~~~~~~
   20 |     }
   21 |     cmd.add_command(list_cmd)
src/main.v:19:29: error: unexpected `!`, the function `list_all_tasks` does not return a Result
   17 |         description: 'Lists all stored tasks'
   18 |         required_args: 0
   19 |         execute: list_all_tasks() !
      |                                   ^
   20 |     }
   21 |     cmd.add_command(list_cmd)
src/main.v:19:3: error: `list_all_tasks()!` (no value) used as value
   17 |         description: 'Lists all stored tasks'
   18 |         required_args: 0
   19 |         execute: list_all_tasks() !
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~
   20 |     }
   21 |     cmd.add_command(list_cmd)
src/main.v:27:11: error: undefined ident: `repo`
   25 | 
   26 | fn list_all_tasks(cmd Command) {
   27 |     tasks := repo.read_tasks()!
      |              ~~~~
   28 |     ui.print_task_list(tasks)
   29 | }
src/main.v:27:16: error: cannot call a method using an invalid expression
   25 | 
   26 | fn list_all_tasks(cmd Command) {
   27 |     tasks := repo.read_tasks()!
      |                   ~~~~~~~~~~~~~
   28 |     ui.print_task_list(tasks)
   29 | }
src/main.v:27:28: error: to propagate the Result call, `list_all_tasks` must return a Result
   25 | 
   26 | fn list_all_tasks(cmd Command) {
   27 |     tasks := repo.read_tasks()!
      |                               ^
   28 |     ui.print_task_list(tasks)
   29 | }
Details: src/main.v:26:32: details: prepend ! before the declaration of the return type of `list_all_tasks`
   24 | }
   25 | 
   26 | fn list_all_tasks(cmd Command) {
      |                                ^
   27 |     tasks := repo.read_tasks()!
   28 |     ui.print_task_list(tasks)
src/main.v:27:28: error: unexpected `!`, the function `read_tasks` does not return a Result
   25 | 
   26 | fn list_all_tasks(cmd Command) {
   27 |     tasks := repo.read_tasks()!
      |                               ^
   28 |     ui.print_task_list(tasks)
   29 | }
src/main.v:27:8: error: assignment mismatch: 1 variable(s) but `read_tasks()` returns 0 value(s)
   25 | 
   26 | fn list_all_tasks(cmd Command) {
   27 |     tasks := repo.read_tasks()!
      |           ~~
   28 |     ui.print_task_list(tasks)
   29 | }
src/main.v:28:21: error: `tasks` (no value) used as value in argument 1 to `src.ui.print_task_list`
   26 | fn list_all_tasks(cmd Command) {
   27 |     tasks := repo.read_tasks()!
   28 |     ui.print_task_list(tasks)
      |                        ~~~~~
   29 | }
   30 |
